second commit tweaks

--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
                 <h2>Our Location</h2>
                 <address>
                     222 Taco Lane, Suite T <br>
-                    Sacramento, Calififornia 94203
+                    Sacramento, California 94203
                     <br>
                 </address>
             </section>
